Update to 1.19.3 [push]