@@ -1,25 +1,24 @@
 package com.mrbysco.rainshield.datagen;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
 import com.mrbysco.rainshield.RainShield;
 import com.mrbysco.rainshield.registry.RainShieldRegistry;
 import net.minecraft.core.Direction;
 import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.data.recipes.FinishedRecipe;
+import net.minecraft.data.recipes.RecipeCategory;
 import net.minecraft.data.recipes.RecipeProvider;
 import net.minecraft.data.recipes.ShapedRecipeBuilder;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.LootTable.Builder;
 import net.minecraft.world.level.storage.loot.LootTables;
 import net.minecraft.world.level.storage.loot.ValidationContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraftforge.client.model.generators.BlockModelProvider;
 import net.minecraftforge.client.model.generators.BlockStateProvider;
@@ -36,20 +35,20 @@ import net.minecraftforge.registries.RegistryObject;
 
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
+import java.util.Set;
 import java.util.function.Consumer;
-import java.util.function.Supplier;
 
 @Mod.EventBusSubscriber(bus = Mod.EventBusSubscriber.Bus.MOD)
 public class RainShieldDataGen {
 	@SubscribeEvent
 	public static void gatherData(GatherDataEvent event) {
 		DataGenerator generator = event.getGenerator();
+		PackOutput packOutput = generator.getPackOutput();
 		ExistingFileHelper helper = event.getExistingFileHelper();
 
 		if (event.includeServer()) {
-			generator.addProvider(event.includeServer(), new Loots(generator));
-			generator.addProvider(event.includeServer(), new Recipes(generator));
+			generator.addProvider(event.includeServer(), new Loots(packOutput));
+			generator.addProvider(event.includeServer(), new Recipes(packOutput));
 		}
 		if (event.includeClient()) {
 			generator.addProvider(event.includeClient(), new Language(generator));
@@ -60,20 +59,24 @@ public class RainShieldDataGen {
 	}
 
 	private static class Loots extends LootTableProvider {
-		public Loots(DataGenerator gen) {
-			super(gen);
+		public Loots(PackOutput packOutput) {
+			super(packOutput, Set.of(), null);
 		}
 
-		@Override
-		protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, Builder>>>, LootContextParamSet>> getTables() {
-			return ImmutableList.of(
-					Pair.of(GeOreBlockTables::new, LootContextParamSets.BLOCK)
+		public List<SubProviderEntry> getTables() {
+			return List.of(
+					new SubProviderEntry(RainShieldBlockTables::new, LootContextParamSets.BLOCK)
 			);
 		}
 
-		public static class GeOreBlockTables extends BlockLoot {
+		public static class RainShieldBlockTables extends BlockLootSubProvider {
+
+			protected RainShieldBlockTables() {
+				super(Set.of(), FeatureFlags.REGISTRY.allFlags());
+			}
+
 			@Override
-			protected void addTables() {
+			protected void generate() {
 				dropSelf(RainShieldRegistry.RAIN_SHIELD.get());
 			}
 
@@ -90,18 +93,18 @@ public class RainShieldDataGen {
 	}
 
 	public static class Recipes extends RecipeProvider {
-		public Recipes(DataGenerator generator) {
-			super(generator);
+		public Recipes(PackOutput packOutput) {
+			super(packOutput);
 		}
 
 		@Override
-		protected void buildCraftingRecipes(Consumer<FinishedRecipe> recipeConsumer) {
-			ShapedRecipeBuilder.shaped(RainShieldRegistry.RAIN_SHIELD.get())
+		protected void buildRecipes(Consumer<FinishedRecipe> consumer) {
+			ShapedRecipeBuilder.shaped(RecipeCategory.REDSTONE, RainShieldRegistry.RAIN_SHIELD.get())
 					.define('F', Items.FLINT)
 					.define('B', Tags.Items.RODS_BLAZE)
 					.define('N', Tags.Items.NETHERRACK)
 					.pattern(" F ").pattern(" B ").pattern("NNN").unlockedBy("has_blaze_rod",
-							has(Tags.Items.RODS_BLAZE)).save(recipeConsumer);
+							has(Tags.Items.RODS_BLAZE)).save(consumer);
 		}
 	}
 
